--- a/Lomboha/.project
+++ b/Lomboha/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lomoba</name>
+	<name>Lomboha</name>
 	<comment></comment>
 	<projects>
 	</projects>
